--- a/SocketTest.Database/SocketTest.Database.csproj
+++ b/SocketTest.Database/SocketTest.Database.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SocketTest.Models\SocketTest.Models.csproj" />
+    <ProjectReference Include="..\SocketTest.Shared\SocketTest.Shared.csproj" />
   </ItemGroup>
 
 </Project>
