--- a/SocketTest.Repository/SocketTest.Repository.csproj
+++ b/SocketTest.Repository/SocketTest.Repository.csproj
@@ -8,10 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.3.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.3.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SocketTest.Database\SocketTest.Database.csproj" />
+    <ProjectReference Include="..\SocketTest.Shared\SocketTest.Shared.csproj" />
   </ItemGroup>
 
 </Project>
